# Python_Fast-API

./: cliente.py  connector.py  crud.py  main.py  pyproject.toml
