[tool.poetry]
name = "crud_clientes"
version = "0.1.0"
description = ""
authors = ["gustavohvgarcia <gustavo.henrique420@uel.br>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
